Test8000311 fails after latest changes to parallelize string and symbol table unlink

XMLWordPrintable

    • gc
    • b04

        Test80003111 fails after latest changes to parallelize string and symbol table unlink with the following guarantee failing:

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/g1CollectedHeap.cpp:5230
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/thomas/Downloads/vmshare/jdk9-review/src/src/share/vm/gc_implementation/g1/g1CollectedHeap.cpp:5230), pid=10808, tid=140684561352448
        # guarantee(!_process_symbols || _do_in_parallel || SymbolTable::parallel_claimed_index() >= _initial_symbol_table_size) failed: claim value 0 after unlink less than initial symbol table size 20011
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0-b01) (build 1.9.0-ea-b01)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b62-internal-debug mixed mode linux-amd64 compressed oops)
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /home/thomas/Downloads/vmshare/jdk9-review/src/test/JTwork/scratch/hs_err_pid10808.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        Problem is that when not parallelizing the symbol/string table scanning, the claim index is not updated and remains zero.

        Proposed fix: modify the guarantee to only check in case of parallel operation.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: