8033443: Test8000311 fails after latest changes to parallelize string and symbol table unlink

When string and symbol table unlink are not performed in parallel, the claim index we check is not updated, and so a guarantee fails. Take this into account when checking the guarantee.

Reviewed-by: brutisso, jwilhelm